package model;

public enum TipoUsuario {
    FREE,
    PREMIUM
}
