@startuml
'https://plantuml.com/class-diagram
'___________STYLES___________
title UML - Servicio de música on demand (Spotify)
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor Black
    BackgroundColor White
    HeaderBackgroundColor Gray
    BorderColor Black
    FontColor White
    FontSize 14
    AttributeFontSize 12
}

skinparam object{
    ArrowColor Black
    BackgroundColor White
    BorderColor Black
    FontColor Black
    FontSize 14
    AttributeFontSize 12
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Black
}

'___________UML___________

package model {

enum TipoUsuario {
FREE
PREMIUM
}

class Usuario {
- id: String
- tipoDeUsuario: TipoUsuario
+ Usuario(String id, TipoUsuario tipoDeUsuario)
+ getTipoDeUsuario(): TipoUsuario
}

}

package service {

interface IServicioDeDescarga {
+ descargarCanción(String cancion, TipoUsuario tipoDeUsuario)
}

class ServicioDeDescaga {
+ descargarCanción(String cancion, TipoUsuario tipoDeUsuario)
}

class ProxyServicioDeDescarga {
+ descargarCanción(String cancion, TipoUsuario tipoDeUsuario
- validarUsuario(TipoUsuario tipoDeUsuario): boolean
}

}

Usuario -> TipoUsuario
IServicioDeDescarga <|.. ServicioDeDescaga
IServicioDeDescarga <|.. ProxyServicioDeDescarga
ProxyServicioDeDescarga .> ServicioDeDescaga
service ..> model

@enduml